<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_cueve_bg"
    android:backgroundTint="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ActivitySignIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_vertical_margin"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:background="@drawable/blue_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN TO CGS"
            android:fontFamily="@font/poppins_light"
            android:textSize="@dimen/heading1"
            android:textColor="@color/text"></TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="65dp"
            android:elevation="16dp"
            app:cardElevation="16dp">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/logo"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/text_field_boxes"
        android:layout_width="@dimen/EditBox"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_light"
        android:layout_height="wrap_content"
        app:labelText="@string/userID">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/edit_ID_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:backgroundTint="@color/colorAccent"
            android:foregroundTint="@color/colorAccent"
            android:inputType="textPersonName" />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/text_field_bfdoxes"
        android:layout_width="@dimen/EditBox"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_light"
        android:layout_height="wrap_content"
        app:labelText="@string/userPass">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/edit_Password_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorAccent"
            android:foregroundTint="@color/colorAccent" />
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
    <LinearLayout
        android:layout_width="@dimen/EditBox"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_ForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            ></TextView>
    </LinearLayout>


    <com.royrodriguez.transitionbutton.TransitionButton
        android:id="@+id/btn_Login"
        android:layout_width="@dimen/EditBox"
        android:layout_height="wrap_content"
        android:text="@string/button_Login"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        app:defaultColor="@color/colorPrimaryDark"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"
        android:textColor="@color/text"
        app:loaderColor="@color/text" />

    <LinearLayout
        android:layout_width="@dimen/EditBox"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fon any help!"
            android:textSize="16dp"
            android:fontFamily="@font/poppins_regular"
            ></TextView>

        <TextView
            android:id="@+id/txt_contactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_Login"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginLeft="3dp"
            android:layout_gravity="center_vertical"
            android:textColor="#053D42"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

</LinearLayout>